--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Run E2E tests
-        run: cypress run --config baseUrl=${{ github.event.deployment_status.target_url }}
+        run: npx cypress run --config baseUrl=${{ github.event.deployment_status.target_url }}
       - name: Set status to "success"
         # The "if" underneath makes sure that this step
         # runs solely when the step before was successful
