--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -42,7 +42,8 @@ jobs:
 
       - name: Cypress run with env
         uses: cypress-io/github-action@v2
-        config: baseUrl=${{ github.event.deployment_status.target_url }}
+        with:
+          config: baseUrl=${{ github.event.deployment_status.target_url }}
 
       - name: Set status to "success"
         # The "if" underneath makes sure that this step
